updated swagger json
